# Narya

./: .gitattributes  .gitignore  Cargo.toml  README.md  install.sh  prompt.md
.memory/: README.md  changelog.md  commands.md  decisions.md  handoff.md  project.md  status.md  tasks.md  ui-assets.md
.prompt/: 001-phase-0-gpui-bootstrap.md  002-phase-1-gpui-design-system.md  003-phase-2-splash-dashboard.md  004-phase-3-business-pages.md  005-phase-4-core-logic-integration.md  006-phase-5-advanced-features.md  007-phase-6-kernel-integration.md  008-phase-7-kernel-orchestration.md  009-phase-8-real-integration.md  010-phase-9-polish-ux.md  011-phase-10-production-polish.md  README.md
.prompt/plans/: 2026-05-02-cleanup-and-gpui-setup.md  2026-05-02-gpui-bootstrap.md
architecture/: narya-gpui-architecture-design.md
crates/narya-app/: Cargo.toml
crates/narya-app/src/: assets.rs  components.rs  ipc.rs  lib.rs  state.rs  theme.rs
crates/narya-app/src/views/: app_shell.rs  config.rs  connections.rs  dashboard.rs  logs.rs  mod.rs  nodes.rs  rules.rs  settings.rs  splash.rs  subscriptions.rs  tools.rs
crates/narya-config/: Cargo.toml
crates/narya-config/src/: lib.rs
crates/narya-core/: Cargo.toml
crates/narya-core/src/: lib.rs
crates/narya-daemon/: Cargo.toml
crates/narya-daemon/src/: config_gen.rs  kernel.rs  main.rs  proxy.rs
crates/narya-ipc/: Cargo.toml
crates/narya-ipc/src/: lib.rs
crates/narya-kernel/: Cargo.toml
crates/narya-log/: Cargo.toml
crates/narya-platform/: Cargo.toml
crates/narya-rules/: Cargo.toml
crates/narya-subscription/: Cargo.toml
crates/narya-subscription/src/: lib.rs
crates/narya-traffic/: Cargo.toml
docs/superpowers/plans/: 2026-05-02-establish-theme-module.md  2026-05-02-gpui-design-system.md  2026-05-02-phase-10-production-polish.md  2026-05-02-phase-3-business-pages.md  2026-05-02-phase-4-core-integration.md  2026-05-02-phase-5-advanced-features.md  2026-05-02-phase-6-backend-integration.md  2026-05-02-phase-7-kernel-orchestration.md  2026-05-02-phase-8-real-integration.md  2026-05-02-phase-9-polish-ux.md
docs/superpowers/specs/: 2026-05-02-gpui-design-system-design.md  2026-05-02-phase-10-production-polish-design.md  2026-05-02-phase-3-business-pages-design.md  2026-05-02-phase-4-core-integration-design.md  2026-05-02-phase-5-advanced-features-design.md  2026-05-02-phase-6-kernel-integration-design.md  2026-05-02-phase-7-kernel-orchestration-design.md  2026-05-02-phase-8-real-integration-design.md  2026-05-02-phase-9-polish-ux-design.md
resources/internal/: subscriptions.json
scripts/: generate-ui-specs.py
src/: components.rs  main.rs  theme.rs
ui/: logs.spec.json  subscriptions.spec.json
ui/logs/: export-diagnostics.spec.json
ui/nodes/: latency-test.spec.json  node-detail.spec.json
ui/specs/: README.md  _global-design-system.spec.md  _page-component-matrix.spec.md  config.spec.md  connections.spec.md  dashboard.spec.md  gemini-handoff.json  logs.spec.md  main_window_spec_detailed.json  main_window_spec_detailed.md  nodes.spec.md  rules.spec.md  settings.spec.md  spec-index.json  splash-background-2k.spec.md  splash.spec.md  subscriptions.spec.md  tools.spec.md
ui/specs/config/: visual-editor.spec.md  yaml-editor.spec.md
ui/specs/connections/: connection-detail.spec.md
ui/specs/dashboard/: system-proxy-rule-mode.spec.md  tun-smart-routing.spec.md
ui/specs/icons/: narya-logo-raw-chroma.spec.md  narya-logo-transparent-1080.spec.md  narya-logo-transparent-1920x1080.spec.md  narya-logo-transparent-2k-2048.spec.md  narya-logo-transparent-2k-2560x1440.spec.md
ui/specs/logs/: export-diagnostics.spec.md
(+36 files in other folders)
