[package]
name = "narya"
version = "0.1.0"
edition = "2021"
authors = ["Neo"]
license = "MIT"
repository = "https://github.com/yhyzgn/Narya"

[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Neo"]
license = "MIT"
repository = "https://github.com/yhyzgn/Narya"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["x11", "wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["x11", "wayland"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
narya-app = { path = "crates/narya-app" }
narya-core = { path = "crates/narya-core" }
narya-config = { path = "crates/narya-config" }
