[package]
name = "narya-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rand = "0.8"
tray-icon = "0.19"
narya-ipc = { path = "../narya-ipc" }
narya-core = { path = "../narya-core" }
narya-config = { path = "../narya-config" }
narya-subscription = { path = "../narya-subscription" }
