[package]
name = "narya-subscription"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.21"
anyhow = "1.0"
uuid = { workspace = true }
narya-core = { path = "../narya-core" }
